--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 gem "github-pages", group: :jekyll_plugins
 
-title: [Digital Epidemiology]
-description: [A short introduction: definitions and use case scenarios]
+title: Digital Epidemiology
+description: A short introduction: definitions and use case scenarios
 
 #show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 #google_analytics: [Your Google Analytics tracking ID]
