--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ plugins:
 gem "github-pages", group: :jekyll_plugins
 
 title: [Digital Epidemiology]
-description: [A short introduction, definitions and use case scenarios]
+description: [Introduction and use case scenarios]
 
 #show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 #google_analytics: [Your Google Analytics tracking ID]
